test/spec_vectors/data/ok/module_36.wat
(module (global (import "spectest" "global_i32") i32) (memory 0) (data (global.get 0) "a"))